--- a/Ch04/ex04-01.css
+++ b/Ch04/ex04-01.css
@@ -24,3 +24,62 @@
 #contentR {
 	margin-left: 245px;
 }
+body {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #767676;
+	background-image: url(images/cute_design_bg.png);
+	background-repeat: repeat-x;
+	margin-top: 28px;
+}
+#sidemenu {
+	background-image: url(images/main_logo.jpg);
+	height: 302px;
+	width: 180px;
+	margin-left: 40px;
+	padding-left: 13px;
+}
+#sidemenu {
+	background-image: url(images/menu_bg.jpg);
+	height: 302px;
+	width: 180px;
+	margin-left: 40px;
+	padding-left: 13px;
+}
+#listNew {
+	margin-right: 30px;
+	margin-left: 50px;
+	line-height: 1.5em;
+}
+#contentMain {
+	margin-right: 55px;
+	margin-left: 13px;
+	line-height: 2.5em;
+}
+.subtitle {
+	font-size: 14px;
+	font-weight: bold;
+	color: #EF4E08;
+	margin-top: 0px;
+}
+.date {
+	color: #EA5413;
+}
+
+
+.headerloge {
+	float: left;
+	margin-top: 20px;
+	margin-left: 48px;
+}
+.headercopy {
+	font-size: 11px;
+	float: left;
+	margin-top: 100px;
+	margin-left: 25px;
+}
+.email {
+	float: left;
+	margin-top: 50px;
+	margin-left: 100px;
+}
